updating with core-kernal

--- a/templates/prometheus-operator/deployment.yaml
+++ b/templates/prometheus-operator/deployment.yaml
@@ -67,15 +67,12 @@ spec:
         - name: prometheus-operator
           image: {{ template "kube-prometheus.image" . }}
           imagePullPolicy: {{ .Values.operator.image.pullPolicy }}
-          {{- if .Values.operator.containerSecurityContext.enabled }}
-          securityContext: {{- omit .Values.operator.containerSecurityContext "enabled" | toYaml | nindent 12 }}
-          {{- end }}
-          {{- if .Values.operator.command }}
-          command: {{- include "common.tplvalues.render" (dict "value" .Values.operator.command "context" $) | nindent 12 }}
-          {{- end }}
-          {{- if .Values.operator.args }}
-          args: {{- include "common.tplvalues.render" (dict "value" .Values.operator.args "context" $) | nindent 12 }}
-          {{- else }}
+          env:
+            - name: PROMETHEUS_CONFIG_RELOADER
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "kube-prometheus.operator.fullname" . }}
+                  key: prometheus-config-reloader
           args:
             {{- if .Values.operator.namespaces }}
             - --namespaces={{ .Values.operator.namespaces }}
